stylesheets/styles.scss
/* ... */
a {
  text-decoration: none;
  color: $link-color;
  &:hover {
    color: lighten($link-color, 10%);
    text-decoration: underline;
  }
}


// HEADINGS

h1, h2, h3, h4, h5, h6 {
  font-family: 'Montserrat';
  color: $main-color;
  font-weight: normal;
  font-weight: 300;
  letter-spacing: -1px;
}

h1 {
  -webkit-font-smoothing: antialiased; /* Prevents fonts looking so bold on Mac */
}

h3 {
  margin-bottom: 10px;
}

h4 {
  color: lighten($main-color, 9%);
}

// SECTIONS

#about {
  position: relative;
  min-height: 350px;
  .portrait {
    width: $portrait-size;
    height: $portrait-size;
    border-radius: 50%;
    background: transparent url('../img/portrait.jpg') center center no-repeat;
    background-size: cover;
    margin: 10px auto;
    &:before {
      // Image preload hack
      content: url('../img/portrait-doodle.png');
      display: none;    
    }
    &:hover, &:active {
      background-image: url('../img/portrait-doodle.png');
      cursor: pointer;
    }
    @media #{$retina-screen} {
      background-image: url('../img/portrait@2x.jpg');
      &:before {
        // Image preload hack
        content: url('../img/portrait-doodle.png@2x');
        display: none;    
      }
      &:hover, &:active {
        background-image: url('../img/portrait-doodle@2x.png');
      }
    }
    @media #{$small-only} {
      width: $portrait-size-small;
      height: $portrait-size-small;
    }
  }
  .bio {
    @media #{$small} {
      // Manual vertical centering.
      margin-top: 30px;
    }
  }
}

#projects {
  // Featured projects
  div.row {
    margin-bottom: 10px;
    @media #{$medium} {
      margin-bottom: 20px;
    }
  }
  img {
    margin-bottom: 10px;
    border: 1px solid darken($background-color, 8%);
  }
  .info {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 85%;
    color: gray;
    span {
      color: $link-color;
    }
    a {
      color: gray;
    }
  }
}

#portfolio {
  background-color: $background-color;
  .filter-label {
    font-size: 85%;
    color: $link-color;
    padding-right: 10px;
  }
  .filter {
    background-color: darken($background-color, 6%);
    color: gray;
    font-weight: normal;
    &:hover, &:active, &.highlight:hover, &.highlight:active {
      background-color: lighten($link-color, 6%);
    }
    &.highlight {
      background-color: $link-color;
    }
    &:hover, &:active, &.highlight {
      color: white;
    }
  }
}

#portfolio-grid {
  .portfolio-grid-item {
    padding: 0.625em; // Default has extra bottom padding and no top padding - this makes it equal all around
    @include transition (opacity 100ms ease-in);
    // The following CSS fixes a rendering bug that causes the width of the images to 'jog' by a pixel when
    // fading in/out. More info: http://stackoverflow.com/questions/15152470/chrome-rendering-issue-fixed-position-anchor-with-ul-in-body/15203880#15203880
    -webkit-transform: translateZ(0);
    &.faded {
      opacity: 0.25;
    }
    &:hover {
      background-color: rgba(0,0,0,0.1);
    }
  }
  img {
    width: 100%;
  }
  a {
    // Disable highlighting that occurs on tap
    // See here: http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent; /* For some Androids */
    &:hover {
      // Override default link behavior
      text-decoration: none;
    }
  }
  .portfolio-name {
    position: relative;
    .caption {
      margin-top: 5px;
      color: $black;
      font-weight: bold;
      line-height: 16px;
      @media #{$small-only} {
        font-size: 14px;
        line-height: 14px;
      }
    }
    .subtitle {
      font-size: 12px;
      color: #777;
      font-weight: normal;
    }
  }
}
#talks {
  iframe {
    width: 100%;
    height: 100%;
  }
}

// OTHER PAGES
#project  {
  .slideshow-wrapper {
    min-height: 200px;
    &.legacy {
      max-width: 650px;
    }
  }
  .project-images {
  }
  .orbit-bullets {
    display: none;
  }
  .project-title {
    margin-top: 20px;
  }
  .project-data .row {
    line-height: rem-calc(24);
  }
  .project-data-key {
    font-size: 80%;
    text-transform: uppercase;
    color: gray;
  }
  .project-description {
    margin-top: 16px;
  }
}

#resume {
  padding-top: 20px;
  .subtitle {
    margin: 0;
    font-weight: bold;
    color: gray;
    position: relative;
    top: -14px;
    left: 2px;
  }
}

#resume, #project {
  padding-bottom: 20px;
  @media #{$medium} {
    padding-bottom: 30px;
  }
}

#templates {
  display: none;
}

// STUFF
.external-link {
  font-size: 80%;
  text-transform: uppercase;
  white-space: nowrap;
}

a.button {
  // Overrides default foundation behavior (transitioning background color on hover)
  @include transition (background-color 0s);
  box-shadow: none;
  -webkit-box-shadow: none;
  &:hover, &:active {
    text-decoration: none;
  }
}

div.epilogue {
  color: darken($background-color, 45%);
  .quote {
    &::after {
      content: '“';
    }
    &::before {
      content: '”';
    }
  }
  .author {
    text-transform: uppercase;
    font-size: rem-calc(10);
    white-space: nowrap;
    &::before {
      content: '— ';
    }
  }
}

.browsehappy {
  background-color: #ffffef;
  margin: 0;
  padding: 5px 20px;
  border-bottom: 1px solid lightgray;
  z-index: 9999;
}

